--- a/source/_posts/语法.md
+++ b/source/_posts/语法.md
@@ -3,7 +3,15 @@ layout: markdow
 title: 语法
 date: 2018-12-25 09:47:11
 tags:
+- 标签1
+- 标签2
+- 域名
+categories:
+- 语法
+- 教程
+cover_picture: /images/12345.jpg
 ---
+hexo + github搭建个人博客
 # 标题相关
 ##二级标题
 ###三级标题
