--- a/source/_posts/笔记.md
+++ b/source/_posts/笔记.md
@@ -2,6 +2,13 @@
 title: 笔记
 date: 2018-12-24 14:57:58
 tags:
+- 标签1
+- 标签2
+- 域名
+categories:
+- 笔记
+- 教程
+cover_picture: /images/6789.jpg
 ---
 hexo+github 搭建个人博客
 # node环境配置
@@ -42,9 +49,12 @@ blog：项目名称
 cd blog
 ##安装项目依赖包
 npm instal
-##启动项目服务
+##启动项目服
 hexo s
+
 ##预览项目
+ git push 推送
+ git pull 更新推送
 在浏览器输入 http://localhost:4000回车访问
 ## 项目编译代码
  hexo g
@@ -57,6 +67,18 @@ hexo s
 ##清缓存
   hexo clean
 
+#域名绑定
+##域名解析
+
+记录类型|主机记录|记录值
+-|-|-
+CNAME|@|用户名.github.io
+a|@|192.30.252.153
+a|@|192.30.252.154
+
+##创建CNAME
+在blog/source路径下创建一个叫CANAME的文件（不带后缀）
+在文件内填写自己的域名，如：baiducom
 
 1.安装node
 2.安装hexo脚手架
@@ -83,5 +105,5 @@ hexo s
 
 
   hexo g编译
-  xexo d上传
+  hexo d上传
   手机访问：用户名.github.io
